Update Audio path and Script file

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     </div>
 
     <!-- Music -->
-    <audio src="./Jana_Gana_Mana_(instrumental).mp3" muted></audio>
+    <audio src="Jana_Gana_Mana_(instrumental).mp3" muted></audio>
 
     <!-- Your old JS -->
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
